--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@
   --hero-background-grey: #2e2f42;
   --white-background: #ffffff;
   --modal-background-dairy: #fcfcfc;
+  --footer-background-grey: #2e2f42;
+
+  /* Size */
+
+  --primary-container-width: 1158px;
 }
 
 body {
@@ -38,11 +43,42 @@ body {
   text-decoration: none;
 }
 
+.title,
+.subtitle,
+.text {
+  margin: 0;
+}
+
+.btn {
+  display: block;
+}
+
+.container {
+  max-width: var(--primary-container-width);
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Index page */
+
+/* Header */
+
+.header {
+  border-bottom: 1px solid var(--accent-cornflower);
+}
+
+.header .container {
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
 
 /* Logo */
 
 .logo {
+  margin-right: 76px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -58,6 +94,18 @@ body {
 
 /* Site-nav */
 
+.site-nav {
+  display: flex;
+}
+
+.site-nav .list {
+  display: flex;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 40px;
+}
+
 .site-nav .page {
   font-weight: 500;
   color: var(--dark-navy-blue);
@@ -71,7 +119,17 @@ body {
 /* Address */
 
 .address {
+  display: flex;
+  margin-left: auto;
   font-style: normal;
+}
+
+.address .list {
+  display: flex;
+}
+
+.address .item:not(:last-child) {
+  margin-right: 40px;
 }
 
 .address .link {
@@ -86,10 +144,16 @@ body {
 /* Hero */
 
 .section.hero {
-  background-color: var(--dark-navy-blue);
+  padding-top: 188px;
+  padding-bottom: 188px;
+  background-color: var(--hero-background-grey);
 }
 
 .section.hero .title {
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -99,11 +163,16 @@ body {
 }
 
 .hero .btn {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white-background);
   background-color: var(--primary-brand-iris);
+  border-color: transparent;
+  border-radius: 4px;
 }
 .hero .btn:hover,
 .hero .btn:focus {
@@ -112,6 +181,23 @@ body {
 }
 
 /* About us */
+
+.section.about-us {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.about-us .list {
+  display: flex;
+}
+
+.about-us .item {
+  width: calc((100% - 24px * 3) / 4);
+}
+
+.about-us .item:not(:last-child) {
+  margin-right: 24px;
+}
 
 .section .subtitle {
   font-weight: 500;
@@ -125,9 +211,18 @@ body {
   color: var(--text-slate);
 }
 
+.section .subtitle {
+  margin-bottom: 8px;
+}
+
 /* What are we doing */
 
+.section.preview {
+  padding-bottom: 120px;
+}
+
 .section .title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -137,20 +232,53 @@ body {
   color: var(--dark-navy-blue);
 }
 
+.preview .list {
+  display: flex;
+}
+
+.preview .item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.preview .item {
+  border: 1px solid var(--accent-cornflower);
+}
+
 /* Our team */
 
 .section.team {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-color: var(--light-cloud);
 }
 
 .team .item {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
   background-color: var(--white-background);
+}
+
+.section .desc {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
+}
+
+.team .list {
+  display: flex;
+}
+
+.team .item:not(:last-child) {
+  margin-right: 24px;
 }
 
 /* Footer */
 
 .footer {
-  background-color: var(--dark-navy-blue);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: var(--footer-background-grey);
 }
 
 .footer .logo-studio,
@@ -158,11 +286,32 @@ body {
   color: var(--light-cloud);
 }
 
+.footer .adv {
+  width: 264px;
+}
+
+.footer .logo {
+  display: block;
+  margin-bottom: 16px;
+}
+
 /* Portfolio page */
 
 /* Filter */
 
+.gallery .filter {
+  display: flex;
+  justify-content: center;
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+
+.gallery .item-btn:not(:last-child) {
+  margin-right: 24px;
+}
+
 .gallery .btn {
+  padding: 12px 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -183,3 +332,24 @@ body {
 }
 
 /* Gallery */
+
+.gallery .desc {
+  text-align: start;
+  padding-left: 16px;
+  border: 1px solid var(--accent-cornflower);
+  border-top: none;
+}
+
+.gallery .cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 120px;
+}
+
+.gallery .card:not(:nth-child(3n + 3)) {
+  margin-right: 24px;
+}
+
+.gallery .card:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 48px;
+}
