--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,7 @@ body {
 
 .header .container {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  align-items: center;
 }
 
 /* Logo */
@@ -96,10 +95,17 @@ body {
 
 .site-nav {
   display: flex;
+  align-items: center;
 }
 
 .site-nav .list {
   display: flex;
+}
+
+.header .link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .site-nav .item:not(:last-child) {
@@ -150,7 +156,7 @@ body {
 }
 
 .section.hero .title {
-  width: 496px;
+  max-width: 496px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 48px;
@@ -165,19 +171,23 @@ body {
 .hero .btn {
   margin-left: auto;
   margin-right: auto;
+  min-width: 169px;
+  height: 56px;
   padding: 16px 32px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white-background);
   background-color: var(--primary-brand-iris);
-  border-color: transparent;
+  /* border-color: transparent; */
+  border: none;
   border-radius: 4px;
+  cursor: pointer;
 }
 .hero .btn:hover,
 .hero .btn:focus {
   background-color: var(--pressed-state-ocean);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 /* About us */
@@ -236,6 +246,10 @@ body {
   display: flex;
 }
 
+.preview .item {
+  width: calc((100% - 48px) / 3);
+}
+
 .preview .item:not(:last-child) {
   margin-right: 24px;
 }
@@ -253,16 +267,18 @@ body {
 }
 
 .team .item {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
   background-color: var(--white-background);
 }
 
-.section .desc {
+.team .desc {
   padding-top: 32px;
   padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
   text-align: center;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team .list {
@@ -286,12 +302,12 @@ body {
   color: var(--light-cloud);
 }
 
-.footer .adv {
+.footer .text {
   width: 264px;
 }
 
 .footer .logo {
-  display: block;
+  display: inline-block;
   margin-bottom: 16px;
 }
 
@@ -312,6 +328,7 @@ body {
 
 .gallery .btn {
   padding: 12px 24px;
+  font-family: inherit;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
