--- a/css/styles.css
+++ b/css/styles.css
@@ -315,11 +315,15 @@ body {
 
 /* Filter */
 
+.section.gallery {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
 .gallery .filter {
   display: flex;
   justify-content: center;
-  padding-top: 96px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .gallery .item-btn:not(:last-child) {
@@ -342,7 +346,7 @@ body {
 .gallery .btn:focus {
   color: var(--white-background);
   background-color: var(--pressed-state-ocean);
-  border-color: var(--pressed-state-ocean);
+  border-color: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
@@ -351,6 +355,8 @@ body {
 /* Gallery */
 
 .gallery .desc {
+  padding-top: 32px;
+  padding-bottom: 32px;
   text-align: start;
   padding-left: 16px;
   border: 1px solid var(--accent-cornflower);
@@ -360,7 +366,6 @@ body {
 .gallery .cards {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 120px;
 }
 
 .gallery .card:not(:nth-child(3n + 3)) {
