--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,7 @@ body {
 .gallery .btn:focus {
   color: var(--white-background);
   background-color: var(--pressed-state-ocean);
-  border-color: 1px solid transparent;
+  border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
@@ -357,8 +357,9 @@ body {
 .gallery .desc {
   padding-top: 32px;
   padding-bottom: 32px;
-  text-align: start;
   padding-left: 16px;
+  padding-right: 16px;
+  text-align: start;
   border: 1px solid var(--accent-cornflower);
   border-top: none;
 }
